--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -19,4 +19,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mdd1
 spring.datasource.username=springuser1
 spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+oc.app.jwtSecret=openclassrooms
+oc.app.jwtExpirationMs=86400000
 #spring.jpa.show-sql: true
